--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.14",
     "@nextui-org/react": "^2.2.10",
+    "@tanstack/react-query": "^5.29.0",
+    "axios": "^1.6.8",
     "framer-motion": "^11.0.23",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
