--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
-    "@mui/material": "^5.15.14",
+    "@mui/material": "^5.15.15",
     "@nextui-org/react": "^2.2.10",
     "@tanstack/react-query": "^5.29.0",
     "axios": "^1.6.8",
@@ -22,6 +22,7 @@
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3",
     "sort-by": "^1.2.0"
