--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nextui-org/react": "^2.2.10",
     "@tanstack/react-query": "^5.29.0",
     "axios": "^1.6.8",
+    "browser-image-compression": "^2.0.2",
     "framer-motion": "^11.0.23",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
