--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^5.29.0",
     "axios": "^1.6.8",
     "browser-image-compression": "^2.0.2",
+    "firebase": "^10.11.1",
     "framer-motion": "^11.0.23",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
