--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@nextui-org/react": "^2.2.10",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.4.0",
     "@tanstack/react-query": "^5.29.0",
     "axios": "^1.6.8",
     "browser-image-compression": "^2.0.2",
